--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": ">=6.14.0 <9.0.0"
   },
   "scripts": {
-    "start": "node ./src/index.js -c"
+    "start": "node ./src/index.js -c",
+    "test": "jest"
   },
   "keywords": [
     "Secure",
@@ -27,6 +28,7 @@
     "yargs": "^13.2.4"
   },
   "devDependencies": {
-    "eslint": "^8.33.0"
+    "eslint": "^8.33.0",
+    "jest": "^29.4.1"
   }
 }
